2007/07/23
	Initial version of hppCorbaServer exported from hpp.
	