@@ -14,9 +14,6 @@ libhppCorbaServer_la_SOURCES = \
 	hppciRobotServerSK.cc 
 
 libhppCorbaServer_la_SOURCES += \
-	common-modelloaderSK.cc \
-	jrl-modelloaderSK.cc \
-	hppciOpenHrp.cpp \
 	hppciObstacle.cpp \
 	hppciProblem.cpp \
 	hppciRobot.cpp \
@@ -28,17 +25,28 @@ libhppCorbaServer_la_CPPFLAGS = \
 	-I. \
 	-I@top_builddir@/idl/server
 
-
 libhppCorbaServer_la_CPPFLAGS += \
 	@HPPCORE_CFLAGS@ \
-	@OMNIORB4_CFLAGS@ \
-	@HPPOPENHRP_CFLAGS@ 
+	@OMNIORB4_CFLAGS@ 
 
 
 libhppCorbaServer_la_LIBADD = \
 	@HPPCORE_LIBS@ \
-	@OMNIORB4_LIBS@ \
+	@OMNIORB4_LIBS@ 
+
+if OPENHRP
+libhppCorbaServer_la_SOURCES += \
+	common-modelloaderSK.cc \
+	jrl-modelloaderSK.cc \
+	hppciOpenHrp.cpp 
+
+libhppCorbaServer_la_CPPFLAGS += \
+	@HPPOPENHRP_CFLAGS@ -DOPENHRP_PREFIX='"@OPENHRP_PREFIX@"'
+
+
+libhppCorbaServer_la_LIBADD += \
 	@HPPOPENHRP_LIBS@
+endif
 
 %SK.cc: ../idl/server/%.idl
 	@OMNIORB_PREFIX@/bin/omniidl -bcxx $<
